--- a/src/index.css
+++ b/src/index.css
@@ -5,48 +5,55 @@ body {
   color: white;
   font-size: 1.25rem;
   background-image: url(../public/image/fondos/skinclub2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
 
-.colores{ background-color: #44166f92;
-margin: 0;
-padding: 0;
-border-style: outset;
-border-color: #9047d586;
-border-radius: 3%;
+.colores{ 
+  color: azure;
+  background-color: #44166f92;
+  margin: 0;
+  padding: 0;
+  border-style: outset;
+  border-color: #9047d586;
+  border-radius: 3%;
 }
 .colores2{
-  background-color: #551a8d;
   color: azure;
   text-decoration: none;
 }
 .width-card{
   width: 13rem;
-  height: 18rem;
+  height: 20rem;
   background-color:#44166f6c;
   margin: 0;
   padding: 0;
   border-style: outset;
   border-radius: 5%;
+  text-decoration: none;
+  font-size: 1rem;
+
 }
 .width-card-interno{
   align-self: center;
-  width: 10rem;
-  height: 10rem;
+  width: 15rem;
+  height: 15rem;
   margin: 0;
   padding:0 ;}
 
 .imagen{
   width: 12rem;
-  height: 12rem;
+  height: 10rem;
   margin: 0;
   padding: 0;
 }
 .logo{
-  width: 30px;
-  height: 30px;
- margin: 0;
+  width: 45px;
+  height: 45px;
+  margin: 0;
+  margin-left: 10px;
   padding: 0;
  
   
@@ -56,6 +63,20 @@ border-radius: 3%;
   height: 40px;
   margin-right: 10px;
   padding: 0;
-  background-color: #551a8d;
   display:flex;
+}
+.logo3{
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  margin-left: 10px;
+  padding: 0;
+}
+
+.Botonagregar{
+  background-color: #551a8d;
+  margin: 0;
+}
+.Logodescripcion{
+  margin-left: 20px;
 }
