--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@ body {
   background-color: blueviolet;
   color: white;
   font-size: 1.25rem;
-  background-image: url(../public/image/fondos/skinclub2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url(../public/image/fondos/EE_DYxfXYAAPjJD.jpg);
+  background-repeat: round;
+  background-size: 100%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
@@ -103,7 +103,7 @@ body {
 }
 .imagendetail{
   width: 20rem;
-  height: 18rem;
+  height: 15rem;
   margin: 0;
   padding: 0;
   background-color:none;}
