--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: blueviolet;
+  background-color: #240144f3;
   color: white;
   font-size: 1.25rem;
-  background-image: url(../public/image/fondos/EE_DYxfXYAAPjJD.jpg);
-  background-repeat: round;
+  background-image: url(../public/image/fondos/skinclub2.jpg);
+  background-repeat:space;
   background-size: 100%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
@@ -74,17 +74,23 @@ body {
 }
 
 .Botonagregar{
-  background-color: #551a8d;
+  background-color: #350661;
   margin: 0;
-  color: aliceblue
+  color: aliceblue;
+  text-decoration: none;
+  border-bottom: #1a0330;
 
 }
 .Botonagregar:hover{
-  background-color: #20033b;
+  background-color: #42047c; 
   margin: 0;
   color: aliceblue;
   
 }
+.tamanoBoton{
+  width: 50px;
+}
+
 .Logodescripcion{
   margin-left: 20px;
 }
