--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@ body {
   background-color: #240144f3;
   color: white;
   font-size: 1.25rem;
-  background-image: url(../public/image/fondos/skinclub2.jpg);
-  background-repeat:space;
-  background-size: 100%;
+  background-image: url(../public/image/fondos/skinclub1.jpg);
+  background-repeat: round;
+  background-size: contain;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   
 }
@@ -19,6 +19,7 @@ body {
   border-style: outset;
   border-color: #9047d586;
   border-radius: 3%;
+  font-size: large;
 }
 .colores2{
   color: azure;
@@ -79,12 +80,14 @@ body {
   color: aliceblue;
   text-decoration: none;
   border-bottom: #1a0330;
+  text-decoration: none;
 
 }
 .Botonagregar:hover{
   background-color: #42047c; 
   margin: 0;
   color: aliceblue;
+  
   
 }
 .tamanoBoton{
@@ -113,3 +116,26 @@ body {
   margin: 0;
   padding: 0;
   background-color:none;}
+
+  .tamanoInput{
+    width: 25rem;
+  }
+
+  .tamanoForm{
+    width: 50rem;
+  }
+  .link{
+    text-decoration: none;
+    color: aliceblue;
+  }
+  .pie{
+  color: azure;
+  background-color: #44166f92;
+  margin: 0;
+  padding: 10px;
+  border-style: outset;
+  border-color: #9047d586;
+  border-radius: 3%;
+  font-size: medium;
+
+  }
