--- a/src/index.css
+++ b/src/index.css
@@ -75,12 +75,12 @@ body {
 }
 
 .Botonagregar{
-  background-color: #350661;
+  background-color: #1c0333;
   margin: 0;
   color: aliceblue;
   text-decoration: none;
-  border-bottom: #1a0330;
-  text-decoration: none;
+  border-bottom: #1c0333;
+  
 
 }
 .Botonagregar:hover{
